--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,7 +62,7 @@
     @apply text-2xl;
     @apply h-screen;
     @apply bg-white dark:bg-gray-900;
-    @apply text-gray-900 dark:text-gray-100;
+    @apply text-gray-900 dark:text-[#EEEEEE];
     @apply flex;
     @apply flex-col;
     @apply overflow-y-scroll;
